# sketch2manga

./: .gitignore  Launcher.py  UI.py  __init__.py  comfy_nodes.py  conda_env.yaml  pyproject.toml  readme.md  requirements.txt  webuiapi_demo.ipynb  webuiapi_demo.py
.github/workflows/: publish.yml
Common/: Utility.py
gradio_demo/: UI.py  launch.py
gradio_demo/Common/: Constant.py  Utility.py
utils/: blend_screentone.py  io_utils.py  webui_screentone_text2img.py
