[project]
name = "sketch2manga"
description = "Apply screentone to line drawings or colored illustrations with diffusion models."
version = "1.0.0"
license = "LICENSE"
dependencies = ["omegaconf", "scikit-image", "numpy", "opencv-python", "einops", "scikit-learn", "requests", "Pillow", "# Added by Francis", "tqdm", "pandas", "# Adding for Web UI", "gradio", "# Adding for additional function", "# requests"]

[project.urls]
Repository = "https://github.com/dmMaze/sketch2manga"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ddmz"
DisplayName = "sketch2manga"
Icon = ""
